Исправлен игровой экран с отображением вариантов ответов и результатов

--- a/public/game.html
+++ b/public/game.html
@@ -1105,14 +1105,14 @@
 
         <!-- Экран результата ответа -->
         <div class="screen" id="result-screen">
-            <section class="results-section" id="result-container">
+            <section class="results-section" id="result-section">
                 <div class="result-badge" id="result-badge">ВЕРНО</div>
 
-                <h3 class="result-header" id="result-title">Правильно!</h3>
+                <h3 class="result-header" id="result-header">Правильно!</h3>
                 <div class="result-explanation" id="result-explanation">
                     <!-- Объяснение результата будет добавлено через JavaScript -->
                 </div>
-                <div class="result-points"><span class="points-value" id="points-details">120</span> ОЧКОВ</div>
+                <div class="result-points" id="result-points"><span class="points-value">120</span> ОЧКОВ</div>
 
                 <footer class="game-footer">
                     <button class="action-button" data-action="nextQuestion">СЛЕДУЮЩЕЕ ДЕЛО</button>
