Улучшен игровой интерфейс с добавлением корректного отображения заданий и вариантов ответов

--- a/public/index.html
+++ b/public/index.html
@@ -713,7 +713,7 @@
                 }
 
                 // Переход на игровой экран
-                window.location.href = '/game';
+                window.location.href = '/game.html';
             });
         });
     </script>
