Реализация полноценного прохождения всех 5 историй с новым интерфейсом

--- a/public/game.html
+++ b/public/game.html
@@ -1427,8 +1427,8 @@
     </div>
 
     <!-- Скрипты игры -->
-    <script src="game-state.js"></script>
-    <script src="app.js"></script>
+    <script src="game-interface.js"></script>
+    <script src="crime-app.js"></script>
 
     <script>
         document.addEventListener('DOMContentLoaded', function () {
