Исправлена работа страницы профиля: убраны тестовые данные, улучшено отображение реальных данных пользователя

--- a/public/profile.html
+++ b/public/profile.html
@@ -769,6 +769,14 @@
             display: inline-block;
         }
 
+        .leaderboard-divider {
+            text-align: center;
+            padding: 4px;
+            color: var(--chalk-white);
+            opacity: 0.5;
+            font-weight: bold;
+        }
+
         /* Footer Navigation */
         .footer-nav {
             margin-top: auto;
