--- a/public/profile.html
+++ b/public/profile.html
@@ -1204,7 +1204,7 @@
         </section>
 
         <footer class="footer-nav">
-            <button class="nav-button">
+            <button class="nav-button" data-action="goToMain">
                 <svg class="nav-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                     <path d="M3 9l9-7 9 7v11a2 2 0 01-2 2H5a2 2 0 01-2-2z" />
                     <path d="M9 22V12h6v10" />
@@ -1212,7 +1212,7 @@
                 ГЛАВНАЯ
             </button>
 
-            <button class="nav-button primary">
+            <button class="nav-button primary" data-action="startNewGame">
                 <svg class="nav-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                     <path d="M22 12h-4l-3 9L9 3l-3 9H2" />
                 </svg>
