🏆 Полная система достижений с анимациями и звуками

--- a/public/game.html
+++ b/public/game.html
@@ -1448,6 +1448,7 @@
     </div>
 
     <!-- Скрипты игры -->
+    <script src="achievement-system.js"></script>
     <script src="game-interface.js"></script>
     <script src="crime-app.js"></script>
 
