--- a/public/index.html
+++ b/public/index.html
@@ -826,6 +826,7 @@
     </script>
 
     <!-- Основные скрипты -->
+    <script src="achievement-system.js"></script>
     <script src="game-state.js"></script>
     <script src="app.js"></script>
 </body>
