--- a/public/profile.html
+++ b/public/profile.html
@@ -1221,6 +1221,8 @@
         </footer>
     </div>
 
+    <!-- Система достижений -->
+    <script src="achievement-system.js"></script>
     <!-- Скрипт для функциональности профиля -->
     <script src="profile.js"></script>
 </body>
