--- a/public/game.html
+++ b/public/game.html
@@ -234,16 +234,16 @@
         /* Compact Blood Capsule Timer */
         .timer-container {
             position: relative;
-            margin-bottom: var(--spacing-xl);
-            padding: 16px 20px;
+            margin-bottom: var(--spacing-lg);
+            padding: 12px 16px;
             background: linear-gradient(145deg,
                     rgba(15, 15, 25, 0.9),
                     rgba(25, 25, 35, 0.8),
                     rgba(15, 15, 25, 0.9));
-            border-radius: 16px;
-            backdrop-filter: blur(12px);
+            border-radius: 12px;
+            backdrop-filter: blur(8px);
             box-shadow:
-                0 4px 20px rgba(0, 0, 0, 0.3),
+                0 3px 12px rgba(0, 0, 0, 0.3),
                 inset 0 1px 0 rgba(255, 255, 255, 0.05);
             border: 1px solid rgba(255, 255, 255, 0.1);
             overflow: hidden;
@@ -257,9 +257,9 @@
             right: 0;
             bottom: 0;
             background: linear-gradient(45deg,
-                    rgba(211, 47, 47, 0.03) 0%,
-                    rgba(65, 65, 75, 0.03) 50%,
-                    rgba(211, 47, 47, 0.03) 100%);
+                    rgba(211, 47, 47, 0.02) 0%,
+                    rgba(65, 65, 75, 0.02) 50%,
+                    rgba(211, 47, 47, 0.02) 100%);
             animation: subtle-glow 4s ease-in-out infinite;
             z-index: 0;
         }
@@ -272,31 +272,31 @@
             }
 
             50% {
-                opacity: 0.6;
+                opacity: 0.5;
             }
         }
 
         .timer-label {
             position: relative;
-            margin-bottom: 12px;
-            font-size: 11px;
+            margin-bottom: 8px;
+            font-size: 10px;
             text-transform: uppercase;
-            letter-spacing: 1.5px;
+            letter-spacing: 1.2px;
             color: var(--accent-red);
             font-weight: 600;
             display: flex;
             align-items: center;
-            gap: 6px;
-            text-shadow: 0 0 8px rgba(211, 47, 47, 0.5);
+            gap: 4px;
+            text-shadow: 0 0 6px rgba(211, 47, 47, 0.5);
             z-index: 2;
             justify-content: center;
         }
 
         .timer-icon {
-            width: 14px;
-            height: 14px;
+            width: 12px;
+            height: 12px;
             color: var(--accent-red);
-            filter: drop-shadow(0 0 4px rgba(211, 47, 47, 0.6));
+            filter: drop-shadow(0 0 3px rgba(211, 47, 47, 0.6));
             animation: pulse-icon 2s ease-in-out infinite;
         }
 
@@ -305,31 +305,31 @@
             0%,
             100% {
                 transform: scale(1);
-                filter: drop-shadow(0 0 4px rgba(211, 47, 47, 0.6));
+                filter: drop-shadow(0 0 3px rgba(211, 47, 47, 0.6));
             }
 
             50% {
-                transform: scale(1.1);
-                filter: drop-shadow(0 0 8px rgba(211, 47, 47, 0.8));
+                transform: scale(1.08);
+                filter: drop-shadow(0 0 6px rgba(211, 47, 47, 0.8));
             }
         }
 
         /* Blood Capsule Design */
         .timer-outer {
             position: relative;
-            height: 40px;
-            max-width: 280px;
+            height: 32px;
+            max-width: 240px;
             margin: 0 auto;
-            border-radius: 20px;
+            border-radius: 16px;
             background: linear-gradient(145deg,
-                    rgba(240, 240, 245, 0.95),
-                    rgba(220, 220, 230, 0.9),
-                    rgba(240, 240, 245, 0.95));
+                    rgba(245, 245, 250, 0.96),
+                    rgba(225, 225, 235, 0.92),
+                    rgba(245, 245, 250, 0.96));
             box-shadow:
-                inset 0 2px 8px rgba(0, 0, 0, 0.1),
-                inset 0 -1px 4px rgba(255, 255, 255, 0.3),
-                0 2px 12px rgba(0, 0, 0, 0.2);
-            border: 2px solid rgba(255, 255, 255, 0.8);
+                inset 0 1px 6px rgba(0, 0, 0, 0.08),
+                inset 0 -1px 3px rgba(255, 255, 255, 0.4),
+                0 2px 8px rgba(0, 0, 0, 0.15);
+            border: 1.5px solid rgba(255, 255, 255, 0.9);
             overflow: hidden;
             z-index: 1;
         }
@@ -338,53 +338,54 @@
         .timer-outer::before {
             content: '';
             position: absolute;
-            top: 2px;
-            left: 2px;
-            right: 2px;
-            height: 50%;
+            top: 1px;
+            left: 1px;
+            right: 1px;
+            height: 45%;
             background: linear-gradient(180deg,
-                    rgba(255, 255, 255, 0.4) 0%,
-                    rgba(255, 255, 255, 0.1) 70%,
+                    rgba(255, 255, 255, 0.5) 0%,
+                    rgba(255, 255, 255, 0.15) 60%,
                     transparent 100%);
-            border-radius: 18px 18px 8px 8px;
+            border-radius: 15px 15px 6px 6px;
             z-index: 10;
         }
 
         .timer-section {
             position: relative;
             height: 100%;
-            border-radius: 18px;
+            border-radius: 15px;
             overflow: hidden;
             background: radial-gradient(ellipse at center,
-                    rgba(30, 30, 40, 0.8) 0%,
-                    rgba(20, 20, 30, 0.9) 70%,
-                    rgba(10, 10, 20, 1) 100%);
+                    rgba(25, 25, 35, 0.7) 0%,
+                    rgba(15, 15, 25, 0.8) 70%,
+                    rgba(5, 5, 15, 0.9) 100%);
         }
 
-        /* Blood Liquid Fill */
+        /* Blood Liquid Fill - flowing from right to left */
         .timer-fill {
             position: absolute;
-            top: 2px;
-            right: 2px;
-            bottom: 2px;
-            width: calc(70% - 4px);
+            top: 1px;
+            left: 1px;
+            bottom: 1px;
+            width: calc(75% - 2px);
             background: linear-gradient(180deg,
-                    rgba(150, 20, 20, 1) 0%,
-                    rgba(180, 30, 30, 1) 20%,
-                    rgba(200, 40, 40, 0.95) 50%,
-                    rgba(220, 60, 60, 0.9) 80%,
-                    rgba(240, 80, 80, 0.8) 100%);
+                    rgba(140, 15, 15, 1) 0%,
+                    rgba(170, 25, 25, 1) 25%,
+                    rgba(190, 35, 35, 0.98) 50%,
+                    rgba(210, 50, 50, 0.95) 75%,
+                    rgba(230, 65, 65, 0.9) 100%);
             animation:
-                timer-countdown-rtl 15s linear forwards,
+                timer-countdown-ltr 15s linear forwards,
                 blood-flow 3s ease-in-out infinite,
                 blood-pulse 2s ease-in-out infinite;
             z-index: 3;
-            border-radius: 16px;
+            border-radius: 14px;
             box-shadow:
-                inset 0 2px 8px rgba(100, 0, 0, 0.6),
-                inset 0 -2px 4px rgba(255, 100, 100, 0.3),
-                0 0 20px rgba(211, 47, 47, 0.4);
+                inset 0 1px 6px rgba(80, 0, 0, 0.6),
+                inset 0 -1px 3px rgba(255, 80, 80, 0.4),
+                0 0 12px rgba(211, 47, 47, 0.3);
             overflow: hidden;
+            transform-origin: right center;
         }
 
         /* Blood surface with subtle waves */
@@ -394,15 +395,15 @@
             top: 0;
             left: 0;
             right: 0;
-            height: 6px;
+            height: 4px;
             background: linear-gradient(90deg,
-                    rgba(255, 150, 150, 0.8) 0%,
-                    rgba(255, 100, 100, 0.9) 25%,
-                    rgba(255, 150, 150, 0.8) 50%,
-                    rgba(255, 100, 100, 0.9) 75%,
-                    rgba(255, 150, 150, 0.8) 100%);
+                    rgba(255, 120, 120, 0.9) 0%,
+                    rgba(255, 80, 80, 1) 25%,
+                    rgba(255, 120, 120, 0.9) 50%,
+                    rgba(255, 80, 80, 1) 75%,
+                    rgba(255, 120, 120, 0.9) 100%);
             animation: blood-surface-wave 2s ease-in-out infinite;
-            border-radius: 16px 16px 0 0;
+            border-radius: 14px 14px 0 0;
         }
 
         /* Bubble system inside blood */
@@ -414,12 +415,12 @@
             right: 0;
             bottom: 0;
             background-image:
-                radial-gradient(circle 3px at 20% 80%, rgba(255, 255, 255, 0.4) 0%, transparent 50%),
-                radial-gradient(circle 2px at 60% 60%, rgba(255, 255, 255, 0.3) 0%, transparent 50%),
-                radial-gradient(circle 4px at 80% 90%, rgba(255, 255, 255, 0.3) 0%, transparent 50%),
-                radial-gradient(circle 2px at 40% 70%, rgba(255, 255, 255, 0.4) 0%, transparent 50%),
-                radial-gradient(circle 3px at 15% 50%, rgba(255, 255, 255, 0.3) 0%, transparent 50%);
-            animation: bubbles-float 4s ease-in-out infinite;
+                radial-gradient(circle 2px at 25% 75%, rgba(255, 255, 255, 0.4) 0%, transparent 50%),
+                radial-gradient(circle 1.5px at 65% 65%, rgba(255, 255, 255, 0.3) 0%, transparent 50%),
+                radial-gradient(circle 2.5px at 85% 80%, rgba(255, 255, 255, 0.35) 0%, transparent 50%),
+                radial-gradient(circle 1px at 45% 60%, rgba(255, 255, 255, 0.4) 0%, transparent 50%),
+                radial-gradient(circle 2px at 15% 45%, rgba(255, 255, 255, 0.3) 0%, transparent 50%);
+            animation: bubbles-float 3.5s ease-in-out infinite;
         }
 
         @keyframes blood-flow {
@@ -430,7 +431,7 @@
             }
 
             50% {
-                filter: hue-rotate(-10deg) saturate(1.3) brightness(1.1);
+                filter: hue-rotate(-8deg) saturate(1.25) brightness(1.05);
             }
         }
 
@@ -439,16 +440,16 @@
             0%,
             100% {
                 box-shadow:
-                    inset 0 2px 8px rgba(100, 0, 0, 0.6),
-                    inset 0 -2px 4px rgba(255, 100, 100, 0.3),
-                    0 0 20px rgba(211, 47, 47, 0.4);
+                    inset 0 1px 6px rgba(80, 0, 0, 0.6),
+                    inset 0 -1px 3px rgba(255, 80, 80, 0.4),
+                    0 0 12px rgba(211, 47, 47, 0.3);
             }
 
             50% {
                 box-shadow:
-                    inset 0 2px 8px rgba(120, 0, 0, 0.7),
-                    inset 0 -2px 4px rgba(255, 120, 120, 0.4),
-                    0 0 30px rgba(211, 47, 47, 0.6);
+                    inset 0 1px 6px rgba(100, 0, 0, 0.7),
+                    inset 0 -1px 3px rgba(255, 100, 100, 0.5),
+                    0 0 18px rgba(211, 47, 47, 0.5);
             }
         }
 
@@ -457,11 +458,11 @@
             0%,
             100% {
                 transform: translateY(0px);
-                opacity: 0.8;
+                opacity: 0.9;
             }
 
             50% {
-                transform: translateY(-1px);
+                transform: translateY(-0.5px);
                 opacity: 1;
             }
         }
@@ -469,33 +470,34 @@
         @keyframes bubbles-float {
             0% {
                 background-position:
-                    20% 80%, 60% 60%, 80% 90%, 40% 70%, 15% 50%;
+                    25% 75%, 65% 65%, 85% 80%, 45% 60%, 15% 45%;
             }
 
             25% {
                 background-position:
-                    22% 75%, 58% 55%, 78% 85%, 38% 65%, 17% 45%;
+                    27% 70%, 63% 60%, 83% 75%, 43% 55%, 17% 40%;
             }
 
             50% {
                 background-position:
-                    25% 70%, 55% 50%, 75% 80%, 35% 60%, 20% 40%;
+                    30% 65%, 60% 55%, 80% 70%, 40% 50%, 20% 35%;
             }
 
             75% {
                 background-position:
-                    23% 75%, 57% 55%, 77% 85%, 37% 65%, 18% 45%;
+                    28% 70%, 62% 60%, 82% 75%, 42% 55%, 18% 40%;
             }
 
             100% {
                 background-position:
-                    20% 80%, 60% 60%, 80% 90%, 40% 70%, 15% 50%;
+                    25% 75%, 65% 65%, 85% 80%, 45% 60%, 15% 45%;
             }
         }
 
-        @keyframes timer-countdown-rtl {
+        /* Blood flows from right to left (shrinks from right side) */
+        @keyframes timer-countdown-ltr {
             from {
-                width: calc(70% - 4px);
+                width: calc(75% - 2px);
             }
 
             to {
@@ -513,48 +515,48 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            width: 80px;
-            height: 28px;
-            border-radius: 8px;
+            width: 64px;
+            height: 22px;
+            border-radius: 6px;
             background: linear-gradient(145deg,
-                    rgba(0, 0, 0, 0.9),
-                    rgba(15, 15, 25, 0.95),
-                    rgba(0, 0, 0, 0.9));
+                    rgba(0, 0, 0, 0.92),
+                    rgba(15, 15, 25, 0.96),
+                    rgba(0, 0, 0, 0.92));
             box-shadow:
-                0 2px 12px rgba(0, 0, 0, 0.7),
-                0 0 15px rgba(211, 47, 47, 0.3),
-                inset 0 1px 0 rgba(255, 255, 255, 0.1);
-            border: 1px solid rgba(211, 47, 47, 0.4);
-            backdrop-filter: blur(8px);
+                0 1px 8px rgba(0, 0, 0, 0.6),
+                0 0 10px rgba(211, 47, 47, 0.25),
+                inset 0 1px 0 rgba(255, 255, 255, 0.08);
+            border: 1px solid rgba(211, 47, 47, 0.3);
+            backdrop-filter: blur(6px);
         }
 
         .timer-value {
-            font-size: 16px;
+            font-size: 13px;
             font-weight: 700;
             color: #ffffff;
             font-family: var(--font-mono);
-            letter-spacing: 1px;
+            letter-spacing: 0.5px;
             display: flex;
             align-items: center;
             justify-content: center;
-            gap: 2px;
+            gap: 1px;
             text-shadow:
-                0 0 8px rgba(255, 255, 255, 0.7),
-                0 0 16px rgba(255, 255, 255, 0.3),
-                0 1px 2px rgba(0, 0, 0, 0.5);
-            filter: drop-shadow(0 0 6px rgba(255, 255, 255, 0.4));
+                0 0 6px rgba(255, 255, 255, 0.6),
+                0 0 12px rgba(255, 255, 255, 0.2),
+                0 1px 1px rgba(0, 0, 0, 0.5);
+            filter: drop-shadow(0 0 4px rgba(255, 255, 255, 0.3));
         }
 
         .timer-blink {
             color: var(--accent-red);
             animation: advanced-blink 1s ease-in-out infinite;
             display: inline-block;
-            transform: translateY(-1px);
-            margin: 0 1px;
+            transform: translateY(-0.5px);
+            margin: 0 0.5px;
             text-shadow:
-                0 0 6px rgba(211, 47, 47, 0.8),
-                0 0 12px rgba(211, 47, 47, 0.5),
-                0 0 18px rgba(211, 47, 47, 0.3);
+                0 0 4px rgba(211, 47, 47, 0.8),
+                0 0 8px rgba(211, 47, 47, 0.4),
+                0 0 12px rgba(211, 47, 47, 0.2);
         }
 
         @keyframes advanced-blink {
@@ -562,29 +564,29 @@
             0%,
             100% {
                 opacity: 1;
-                transform: translateY(-1px) scale(1);
+                transform: translateY(-0.5px) scale(1);
                 text-shadow:
-                    0 0 6px rgba(211, 47, 47, 0.8),
-                    0 0 12px rgba(211, 47, 47, 0.5),
-                    0 0 18px rgba(211, 47, 47, 0.3);
+                    0 0 4px rgba(211, 47, 47, 0.8),
+                    0 0 8px rgba(211, 47, 47, 0.4),
+                    0 0 12px rgba(211, 47, 47, 0.2);
             }
 
             50% {
-                opacity: 0.3;
-                transform: translateY(-1px) scale(0.95);
+                opacity: 0.4;
+                transform: translateY(-0.5px) scale(0.96);
                 text-shadow:
-                    0 0 3px rgba(211, 47, 47, 0.5),
-                    0 0 6px rgba(211, 47, 47, 0.3);
+                    0 0 2px rgba(211, 47, 47, 0.5),
+                    0 0 4px rgba(211, 47, 47, 0.2);
             }
         }
 
         /* Minimal markers on glass */
         .timer-markers {
             position: absolute;
-            top: 6px;
-            left: 8px;
-            right: 8px;
-            height: 4px;
+            top: 4px;
+            left: 6px;
+            right: 6px;
+            height: 3px;
             z-index: 2;
             display: flex;
             justify-content: space-between;
@@ -592,23 +594,23 @@
         }
 
         .timer-marker {
-            width: 1px;
-            height: 2px;
-            background: rgba(0, 0, 0, 0.2);
+            width: 0.5px;
+            height: 1.5px;
+            background: rgba(0, 0, 0, 0.15);
             opacity: 0;
             animation: marker-fade-in 2s ease-out forwards;
         }
 
         .timer-marker:nth-child(5n) {
-            height: 4px;
-            width: 2px;
-            background: rgba(0, 0, 0, 0.3);
+            height: 3px;
+            width: 1px;
+            background: rgba(0, 0, 0, 0.25);
         }
 
         @keyframes marker-fade-in {
             0% {
                 opacity: 0;
-                transform: translateY(2px);
+                transform: translateY(1px);
             }
 
             100% {
@@ -619,33 +621,33 @@
 
         /* Enhanced remaining indicator */
         .remaining-indicator {
-            margin-top: 10px;
+            margin-top: 8px;
             display: flex;
             align-items: center;
             justify-content: center;
-            gap: 6px;
-            font-size: 10px;
+            gap: 4px;
+            font-size: 9px;
             text-transform: uppercase;
-            letter-spacing: 1px;
+            letter-spacing: 0.8px;
             color: var(--accent-red);
             font-weight: 600;
-            text-shadow: 0 0 6px rgba(211, 47, 47, 0.5);
+            text-shadow: 0 0 4px rgba(211, 47, 47, 0.4);
             position: relative;
             z-index: 2;
         }
 
         .red-dot {
-            width: 6px;
-            height: 6px;
+            width: 4px;
+            height: 4px;
             background: radial-gradient(circle,
                     rgba(255, 255, 255, 1) 0%,
-                    rgba(211, 47, 47, 1) 30%,
-                    rgba(150, 30, 30, 0.8) 100%);
+                    rgba(211, 47, 47, 1) 35%,
+                    rgba(140, 25, 25, 0.8) 100%);
             border-radius: 50%;
             animation: dot-pulse 1.5s ease-in-out infinite;
             box-shadow:
-                0 0 8px rgba(211, 47, 47, 0.7),
-                0 0 16px rgba(211, 47, 47, 0.3);
+                0 0 6px rgba(211, 47, 47, 0.6),
+                0 0 12px rgba(211, 47, 47, 0.2);
         }
 
         @keyframes dot-pulse {
@@ -654,16 +656,16 @@
             100% {
                 transform: scale(1);
                 box-shadow:
-                    0 0 8px rgba(211, 47, 47, 0.7),
-                    0 0 16px rgba(211, 47, 47, 0.3);
+                    0 0 6px rgba(211, 47, 47, 0.6),
+                    0 0 12px rgba(211, 47, 47, 0.2);
             }
 
             50% {
-                transform: scale(1.2);
+                transform: scale(1.15);
                 box-shadow:
-                    0 0 12px rgba(211, 47, 47, 0.9),
-                    0 0 24px rgba(211, 47, 47, 0.5),
-                    0 0 36px rgba(211, 47, 47, 0.2);
+                    0 0 8px rgba(211, 47, 47, 0.8),
+                    0 0 16px rgba(211, 47, 47, 0.4),
+                    0 0 24px rgba(211, 47, 47, 0.15);
             }
         }
 
